Basic working version using actionlib and qt gui

--- a/vf_gui/forms/mainwindow.ui
+++ b/vf_gui/forms/mainwindow.ui
@@ -27,7 +27,7 @@
      <string>Quit</string>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>230</x>
@@ -43,17 +43,17 @@
      <item>
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>TextLabel</string>
+        <string/>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>110</y>
+      <y>210</y>
       <width>82</width>
       <height>54</height>
      </rect>
@@ -74,6 +74,19 @@
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QPushButton" name="recordButton">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>110</y>
+      <width>80</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Record</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
