--- a/vf_gui/forms/mainwindow.ui
+++ b/vf_gui/forms/mainwindow.ui
@@ -49,13 +49,26 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="layoutWidget">
+   <widget class="QPushButton" name="refreshButton">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>330</y>
+      <width>80</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Refresh</string>
+    </property>
+   </widget>
+   <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>210</y>
-      <width>82</width>
-      <height>54</height>
+      <y>101</y>
+      <width>121</width>
+      <height>211</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -73,20 +86,14 @@
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QPushButton" name="saveButton">
+       <property name="text">
+        <string>Save</string>
+       </property>
+      </widget>
+     </item>
     </layout>
-   </widget>
-   <widget class="QPushButton" name="recordButton">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>110</y>
-      <width>80</width>
-      <height>71</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Record</string>
-    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
