--- a/vf_gui/forms/main_window.ui
+++ b/vf_gui/forms/main_window.ui
@@ -62,7 +62,7 @@
      <string>Refresh</string>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>70</x>
@@ -90,6 +90,32 @@
       <widget class="QPushButton" name="saveButton">
        <property name="text">
         <string>Save</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="verticalLayoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>330</y>
+      <width>121</width>
+      <height>80</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_3">
+     <item>
+      <widget class="QRadioButton" name="softRadioButton">
+       <property name="text">
+        <string>Soft Guides</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QRadioButton" name="hardRadioButton">
+       <property name="text">
+        <string>Hard Guides</string>
        </property>
       </widget>
      </item>
