--- a/vf_gui/forms/main_window.ui
+++ b/vf_gui/forms/main_window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>715</width>
-    <height>472</height>
+    <height>680</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,10 +17,10 @@
    <widget class="QPushButton" name="quitButton">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>380</y>
+      <x>580</x>
+      <y>580</y>
       <width>101</width>
-      <height>23</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -53,9 +53,9 @@
     <property name="geometry">
      <rect>
       <x>550</x>
-      <y>190</y>
+      <y>140</y>
       <width>80</width>
-      <height>23</height>
+      <height>61</height>
      </rect>
     </property>
     <property name="text">
@@ -99,7 +99,7 @@
     <property name="geometry">
      <rect>
       <x>530</x>
-      <y>90</y>
+      <y>30</y>
       <width>121</width>
       <height>80</height>
      </rect>
@@ -124,10 +124,10 @@
    <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>180</x>
+      <x>150</x>
       <y>270</y>
-      <width>361</width>
-      <height>80</height>
+      <width>421</width>
+      <height>51</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -153,6 +153,29 @@
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QTextEdit" name="consoleText">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>340</y>
+      <width>661</width>
+      <height>211</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="clearButton">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>560</y>
+      <width>80</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Clear</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
